# hostless

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
docs/: CLI.md  DEVELOPER.md  app-integration-discussion.md  app-integration.md  auth-and-security.md  cli-commands.md  process-management.md  proxy-api.md  reverse-proxy.md  testing.md
src/: config.rs  hosts.rs  lib.rs  main.rs  tls.rs
src/auth/: admin.rs  bridge_token.rs  middleware.rs  mod.rs  oauth.rs
src/process/: manager.rs
src/providers/: anthropic.rs  google.rs  mod.rs  openai.rs
src/server/: cors.rs  dispatch.rs  mod.rs  ollama.rs  pages.rs  reverse_proxy.rs  route_table.rs  routes.rs  streaming.rs
src/vault/: encryption.rs  keychain.rs  mod.rs  store.rs
test-web/: README.md  hostless-connect-react.js  hostless-connect.js  index.html
tests/: auth_integration.rs  cli_integration.rs  openai_e2e.rs  proxy_integration.rs
