[package]
name = "hostless"
version = "0.4.1"
edition = "2021"
description = "Local AI proxy that manages LLM API keys and injects them into forwarded requests"
license = "Apache-2.0"

[features]
default = []
internal-testing = []

[[test]]
name = "auth_integration"
path = "tests/auth_integration.rs"
required-features = ["internal-testing"]

[[test]]
name = "proxy_integration"
path = "tests/proxy_integration.rs"
required-features = ["internal-testing"]

[[test]]
name = "openai_e2e"
path = "tests/openai_e2e.rs"
required-features = ["internal-testing"]

[[test]]
name = "cli_integration"
path = "tests/cli_integration.rs"
required-features = ["internal-testing"]

[dependencies]
# Async runtime & HTTP server
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client for upstream requests
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Encryption (AES-256-GCM)
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"

# Key derivation (fallback)
argon2 = "0.5"

# OS keychain
keyring = { version = "3", features = ["apple-native", "linux-native"] }

# OAuth
oauth2 = "5"

# Token generation & time
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
tokio-stream = "0.1"
futures = "0.3"

# URL handling
url = "2"

# Native OS dialogs
rfd = "0.14"

# Open browser
open = "5"

# Directory paths
dirs = "5"

# Error handling
anyhow = "1"
thiserror = "1"

# Password input (fallback for keychain)
rpassword = "7"

# TLS
axum-server = { version = "0.7", features = ["tls-rustls"] }
rcgen = "0.13"

# Rate limiting
governor = "0.6"

# Byte utilities
bytes = "1"
urlencoding = "2.1.3"

# Process management (portless integration)
nix = { version = "0.29", features = ["signal", "process"] }
fs2 = "0.4"
shell-words = "1"

# HTTP client for reverse proxy (low-level)
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "tokio"] }
hyper-rustls = { version = "0.27", features = ["http1", "http2", "native-tokio", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
http-body-util = "0.1"

[dev-dependencies]
tokio-tungstenite = "0.24"

[profile.release]
opt-level = 3
lto = true
strip = true
